pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /admin
  name: pihole
  namespace: pihole
spec:
  rules:
    - host: pihole.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: homelab-pihole-web
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pihole.int.kyledev.co
      secretName: wildcard-kyledev-tls-prod
